<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.16">
  <GVL Name="GVL_Machine" Id="{c39f9a5e-bc46-47e8-9a07-5b407580079f}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	HWIO		:HardWareIO;
	machineMode			:MachineMode;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>