<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.16">
  <DUT Name="MachineMode" Id="{5c4b6f57-5db8-4262-94a3-3aefadcbb9e1}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE MachineMode :
(
	Idle := 0,
	Auto	:=1,
	Manual	:=2,
	Undefined	:=10
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>